fa-projekt/fa-projekt-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fa-projekt-api-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: fa-projekt-api-label
  template:
    metadata:
      labels:
        pod: fa-projekt-api-label
    spec:
      containers:
        - name: fa-projekt-api-container
          image: pumec/fa-wac-be:1.0.0-53
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
