fa-projekt/fa-projekt-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fa-projekt-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: wac-hospital
  rules:
  - http:
      paths:
      - path: /fa-projekt-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: fa-projekt-api
            port:
              name: webapi-s-port
